[tool.poetry]
name = "test"
version = "0.1.0"
description = "To create an endpoint that connects to Groq and takes in an emoji as input to explain its meaning, you'll follow these steps:"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
emoji = "*"
fastapi = "^0.78.0"
prisma = "*"
pydantic = "*"
uvicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
